@@ -24,7 +24,7 @@ Authors: John R. Ellis and Jesse Hull
 **************************************************************************/
 
 # ifdef HAVE_CONFIG_H
-#   include "config.h"
+#   include "private/config.h"
 # endif
 
 # ifndef GC_BUILD
