@@ -26,7 +26,7 @@
 # define GC_PMARK_H
 
 # ifdef HAVE_CONFIG_H
-#   include "config.h"
+#   include "private/config.h"
 # endif
 
 # ifndef GC_BUILD
